--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --accent-color: rgb(88, 88, 173);
+  --accent-color-hover: rgb(57, 57, 133);
+  --link-text-color: rgb(223, 223, 223);
+  --link-text-color-hover: rgb(255, 255, 255);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
