--- a/src/_components/Filter/Filter.module.css
+++ b/src/_components/Filter/Filter.module.css
@@ -1,10 +1,15 @@
 .filter {
     border: 1px solid rgba(3, 3, 3, 0.295);
+    padding: 0 5px;
 }
 
 .formGroup {
     display: grid;
     grid-template-columns: 1fr;
     text-align: left;
-    padding: 5px;
+    margin: 10px 0;
+}
+
+.sortBlock select {
+    width: 100%;
 }
